Updates interests section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <section class="u-align-center u-clearfix u-grey-5 u-section-1" id="carousel_4dca">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h4 class="u-text u-text-1">More about me</h4>
-        <h2 class="u-text u-text-2"></h2>
+        <p class="u-text u-text-2">During my freetime I enjoy doing loads of activities ranging from online courses and volunteering to hosting my own podcast show and as result receing multiple awards</hp>
         <div class="u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-col">
@@ -172,8 +172,8 @@
                 <div class="u-layout-row">
                   <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-20 u-white u-layout-cell-1">
                     <div class="u-border-2 u-border-palette-1-base u-container-layout u-valign-middle u-container-layout-1">
-                      <h5 class="u-text u-text-palette-1-base u-text-3">Programming</h5>
-                      <p class="u-text u-text-grey-50 u-text-4">Web-development skills</p>
+                      <h5 class="u-text u-text-palette-1-base u-text-3">Programming skills</h5>
+                      <p class="u-text u-text-grey-50 u-text-4">Web-development </p>
                       <p class="u-text u-text-grey-50 u-text-4">Python, R</p>
                       <p class="u-text u-text-grey-50 u-text-4">Robotic Process Automation</p>
                     </div>
@@ -191,6 +191,7 @@
                       <h5 class="u-text u-text-palette-1-base u-text-7">Awards</h5>
                       <p class="u-text u-text-grey-50 u-text-8">King’s Leadership and Professional Skills Award (KLPSA)</p>
                       <p class="u-text u-text-grey-50 u-text-8">LAMDA Public Speaking Grade 8 Gold Medal with distinction</p>
+                      <p class="u-text u-text-grey-50 u-text-8">“Top 1 student” for outstanding academic achievements</p>
                     </div>
                   </div>
                 </div>
@@ -201,7 +202,7 @@
                     <div class="u-border-2 u-border-palette-3-base u-container-layout u-valign-middle u-container-layout-4">
                       <h5 class="u-text u-text-palette-3-base u-text-9">Volunteering</h5>
                       <p class="u-text u-text-grey-50 u-text-10">CSFC Volunteering Club President</p>
-                      <p class="u-text u-text-grey-50 u-text-10">TyHafan shop assistant,</p>
+                      <p class="u-text u-text-grey-50 u-text-10">TyHafan shop assistant</p>
                       <p class="u-text u-text-grey-50 u-text-10">ACE Maths and English tutor</p>
                     </div>
                   </div>
@@ -216,8 +217,9 @@
                   <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-20 u-white u-layout-cell-6">
                     <div class="u-border-2 u-border-palette-3-base u-container-layout u-valign-middle u-container-layout-6">
                       <h5 class="u-text u-text-palette-3-base u-text-13">Interests</h5>
-                      <p class="u-text u-text-grey-50 u-text-14">Podcasts (founder and host of Women in STEM podcast series)</p>
-                      <p class="u-text u-text-grey-50 u-text-14">Photography (professional photo school, Photography Club President)</p>
+                      <p class="u-text u-text-grey-50 u-text-14">Podcasts: Founder and Host of Women in STEM podcast series</p>
+                      <p class="u-text u-text-grey-50 u-text-14">Photography: attended professional photo-school and was a Photography Club President</p>
+                      <p class="u-text u-text-grey-50 u-text-14">Swimming: attended swimming classes for 5 years and played water-polo</p>
                     </div>
                   </div>
                 </div>
@@ -229,7 +231,7 @@
     </section>
     <div class="callout">
           
-      <a href="https://www.linkedin.com/in/anel" class="button--primary">Visit my LinkedIn profile</a>
+      <a href="https://www.linkedin.com/in/anel" class="align-center button--primary">Visit my LinkedIn profile</a>
       <a href="https://anchor.fm/kcl-womxn-in-stem" class="button--primary">Listen to my podcast</a>
     </div>   
         
