color and text updates

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="mailto:name@email.com">anel.yegem@outlook.com</a>
                     </div>
                     <p class="lead mb-5">Hi, I'm Anel</p>
-                    <p class="lead mb-5">Born and raised in Kazakhstan, I moved to the UK at the age of 17 to pursue my dreams. I have studied at the top UK institutions such as King's College London and Cardiff Sixth Form College. I was intern at some of the biggest multinational corporations like Deloitte, Philips, Barclays and Bank of America </p>
+                    <p class="lead mb-5">Born and raised in Kazakhstan, I moved to the UK at the age of 17 to study at one of the top A-level collegues in the country. Currently I'm in my final year of an undergraduate degree in Mathematics with Finance and Management at King's College London. At such a young age, I already have a significant work experience through internships with globally-recognised multinational corporations such as Deloitte, Philips, Barclays and Bank of America. </p>
 
                     
                         
