--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <li class="lead mb-5">  Improving diversity in STEM 👩🏻‍🔬</li>
                     </ul>  
                     <div class="social-icons">
+                        <!--<a class="btn btn-primary" href="https://www.linkedin.com/in/anel/" role="button">Connect with me on LinkedIn</a>-->
                         <a class="social-icon" href="https://www.linkedin.com/in/anel/"><i class="fab fa-linkedin-in"></i></a>
                         <!--<a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
